--- a/mediaquery.css
+++ b/mediaquery.css
@@ -8,31 +8,32 @@
         display: none;
     }
     .header-nav {
+        width: 100%;
         background-color: #9BF3FC;
     }
-    .mobile-search {
+     .mobile-search {
         display: block;
         position: relative;
-        margin: auto;
+        margin: auto ;
     }
     .mobile-search input {
-        width: 540px;
-        height: 40px;
+        width: 100%;
+        height: 30px;
         padding-left: 50px;
-        border-radius: 5px;
+        border-radius: 8px;
         font-size: 18px;
         border: none;
         box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
     }
     .search-tab {
         position: absolute;
-        top: 10px;
+        top: 5px;
         left: 15px;
         font-size: 22px;
     }
     .mic {
         position: absolute;
-        top: 10px;
+        top: 5px;
         right: 15px;
         font-size: 22px;
     }
@@ -42,7 +43,12 @@
     }
 
     /* carousel */
-
+    .carousel-section  {
+        display: none;
+    }
+    .mobile-section {
+        display: block;
+    }
     .item-section {
         flex-direction: column;
     }
