--- a/mediaquery.css
+++ b/mediaquery.css
@@ -7,15 +7,18 @@
     .search {
         display: none;
     }
+
     .header-nav {
         width: 100%;
         background-color: #9BF3FC;
     }
-     .mobile-search {
+
+    .mobile-search {
         display: block;
         position: relative;
-        margin: auto ;
+        margin: auto;
     }
+
     .mobile-search input {
         width: 100%;
         height: 30px;
@@ -25,12 +28,14 @@
         border: none;
         box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
     }
+
     .search-tab {
         position: absolute;
         top: 5px;
         left: 15px;
         font-size: 22px;
     }
+
     .mic {
         position: absolute;
         top: 5px;
@@ -43,16 +48,34 @@
     }
 
     /* carousel */
-    .carousel-section  {
+    /* .carousel-section  {
         display: none;
     }
     .mobile-section {
         display: block;
-    }
+    } */
     .item-section {
         flex-direction: column;
+        margin: 20px;
     }
+
     .item1 {
         width: 100%;
+        padding: 0 18px 20px 18px;
+        margin-bottom: 20px;
+    }
+
+    .box {
+        flex-direction: wrap;
+    }
+    .boxItem img {
+        width: 130px;
+        height: 110px;
+    }
+    .item2 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
     }
 }
