--- a/mediaquery.css
+++ b/mediaquery.css
@@ -61,12 +61,17 @@
 
     .item1 {
         width: 100%;
-        padding: 0 18px 20px 18px;
         margin-bottom: 20px;
     }
-
+    .item1 h2 {
+        padding-left: 35px;
+    }
+    .item1 a {
+        padding-left: 35px;
+    }
     .box {
         flex-direction: wrap;
+        justify-content: center;
     }
     .boxItem img {
         width: 130px;
@@ -76,6 +81,29 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
 
+    /* lastSeenProduct */
+    .lastSeenProduct h2 {
+        font-size: 22px;
+    }
+    .seenProductImg {
+        flex-wrap: wrap;
+    }
+    .seenProductImg img {
+        width: 100%;
+    }
+    .fashionBrands {
+        display: none;
+    }
+
+    .bangleItem {
+        justify-content: center;
+    }
+
+    /* footer */
+    .mainFooter {
+        padding: 20px;
+        gap: 30px;
     }
 }
